fixed overflow for the bubbles

--- a/app/app.css
+++ b/app/app.css
@@ -6,8 +6,9 @@
     width:25%;
     background-color:black;
     left:0;
+   
     position:fixed;
-    
+    overflow-x:hidden;
     
 } 
 
